# overalls

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tasks.py
grasshopper-components/: analyse-mesh.ghx  subdivide.ghx  weaving.ghx
src/overalls/: __init__.py  install.py  member.py  space_frame.py  subdiv.py  utils.py  weave.py
src/overalls/space_frame/: __init__.py  _mixin.py  mesh.py  network.py
